// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormHelperText renders fail helper text  1`] = `
.c0 {
  padding: 20px;
  width: 100%;
  font-family: 'Poppins',sans-serif;
  font-size: 20px;
  border-radius: 10px;
  color: #000000;
  background-color: #F3B6A5;
}

<div
  class="c0"
>
  The fetching is failed
</div>
`;

exports[`FormHelperText renders info helper text  1`] = `
.c0 {
  padding: 20px;
  width: 100%;
  font-family: 'Poppins',sans-serif;
  font-size: 20px;
  border-radius: 10px;
  color: #000000;
  background-color: #FDF8C3;
}

<div
  class="c0"
>
  Loading
</div>
`;

exports[`FormHelperText renders success helper text  1`] = `
.c0 {
  padding: 20px;
  width: 100%;
  font-family: 'Poppins',sans-serif;
  font-size: 20px;
  border-radius: 10px;
  color: #000000;
  background-color: #CEE3A0;
}

<div
  class="c0"
>
  The data was updated
</div>
`;
